@@ -1,6 +1,6 @@
 /* Process record and replay target code for GNU/Linux.
 
-   Copyright (C) 2008-2013 Free Software Foundation, Inc.
+   Copyright (C) 2008, 2009, 2010 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -240,7 +240,6 @@ record_linux_system_call (enum gdb_syscall syscall,
     case gdb_sys_exit:
       {
         int q;
-
         target_terminal_ours ();
         q = yquery (_("The next instruction is syscall exit.  "
                       "It will make the program exit.  "
@@ -257,7 +256,6 @@ record_linux_system_call (enum gdb_syscall syscall,
     case gdb_sys_read:
       {
         ULONGEST addr, count;
-
         regcache_raw_read_unsigned (regcache, tdep->arg2, &addr);
         regcache_raw_read_unsigned (regcache, tdep->arg3, &count);
         if (record_arch_list_add_mem ((CORE_ADDR) addr, (int) count))
@@ -656,7 +654,6 @@ record_linux_system_call (enum gdb_syscall syscall,
     case gdb_sys_readlink:
       {
         ULONGEST len;
-
         regcache_raw_read_unsigned (regcache, tdep->arg2,
                                     &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg3, &len);
@@ -672,11 +669,11 @@ record_linux_system_call (enum gdb_syscall syscall,
     case gdb_sys_reboot:
       {
         int q;
-
         target_terminal_ours ();
-        q = yquery (_("The next instruction is syscall reboot.  "
-		      "It will restart the computer.  "
-		      "Do you want to stop the program?"));
+        q =
+          yquery (_("The next instruction is syscall reboot.  "
+                    "It will restart the computer.  "
+                    "Do you want to stop the program?"));
         target_terminal_inferior ();
         if (q)
           return 1;
@@ -695,26 +692,21 @@ record_linux_system_call (enum gdb_syscall syscall,
 
     case gdb_sys_munmap:
       {
+        int q;
         ULONGEST len;
 
         regcache_raw_read_unsigned (regcache, tdep->arg1,
                                     &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg2, &len);
-        if (record_memory_query)
-          {
-	    int q;
-
-            target_terminal_ours ();
-            q = yquery (_("\
-The next instruction is syscall munmap.\n\
-It will free the memory addr = 0x%s len = %u.\n\
-It will make record target cannot record some memory change.\n\
-Do you want to stop the program?"),
-                        OUTPUT_REG (tmpulongest, tdep->arg1), (int) len);
-            target_terminal_inferior ();
-            if (q)
-              return 1;
-          }
+        target_terminal_ours ();
+        q = yquery (_("The next instruction is syscall munmap.  "
+                      "It will free the memory addr = 0x%s len = %u.  "
+                      "It will make record target get error.  "
+                      "Do you want to stop the program?"),
+                    OUTPUT_REG (tmpulongest, tdep->arg1), (int) len);
+        target_terminal_inferior ();
+        if (q)
+          return 1;
       }
       break;
 
@@ -753,7 +745,6 @@ Do you want to stop the program?"),
     case gdb_sys_getpeername:
       {
         ULONGEST len;
-
         regcache_raw_read_unsigned (regcache, tdep->arg2, &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg3, &len);
         if (record_linux_sockaddr (regcache, tdep, tmpulongest, len))
@@ -764,18 +755,14 @@ Do you want to stop the program?"),
     case gdb_sys_recvfrom:
       {
         ULONGEST len;
-
         regcache_raw_read_unsigned (regcache, tdep->arg4, &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg5, &len);
         if (record_linux_sockaddr (regcache, tdep, tmpulongest, len))
           return -1;
       }
-      break;
-
     case gdb_sys_recv:
       {
         ULONGEST size;
-
         regcache_raw_read_unsigned (regcache, tdep->arg2, &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg3, &size);
         if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) size))
@@ -801,7 +788,6 @@ Do you want to stop the program?"),
         {
           ULONGEST optvalp;
           gdb_byte *optlenp = alloca (tdep->size_int);
-
           if (target_read_memory ((CORE_ADDR) tmpulongest, optlenp,
                                   tdep->size_int))
             {
@@ -843,6 +829,8 @@ Do you want to stop the program?"),
             if (tmpulongest)
               {
                 gdb_byte *a = alloca (tdep->size_ulong * 2);
+                int addrlen;
+                gdb_byte *addrlenp;
                 ULONGEST len;
 
                 tmpulongest += tdep->size_ulong;
@@ -871,7 +859,6 @@ Do you want to stop the program?"),
         case RECORD_SYS_SOCKETPAIR:
           {
             gdb_byte *a = alloca (tdep->size_ulong);
-
             regcache_raw_read_unsigned (regcache, tdep->arg2,
                                         &tmpulongest);
             if (tmpulongest)
@@ -905,6 +892,8 @@ Do you want to stop the program?"),
           if (tmpulongest)
             {
               gdb_byte *a = alloca (tdep->size_ulong * 2);
+              int addrlen;
+              gdb_byte *addrlenp;
               ULONGEST len;
 
               tmpulongest += tdep->size_ulong * 4;
@@ -1148,7 +1137,6 @@ Do you want to stop the program?"),
     case gdb_sys_msgrcv:
       {
         ULONGEST msgp;
-
         regcache_raw_read_signed (regcache, tdep->arg3, &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg2, &msgp);
         tmpint = (int) tmpulongest + tdep->size_long;
@@ -1182,7 +1170,6 @@ Do you want to stop the program?"),
           {
             ULONGEST second;
             ULONGEST ptr;
-
             regcache_raw_read_signed (regcache, tdep->arg3, &second);
             regcache_raw_read_unsigned (regcache, tdep->arg5, &ptr);
             tmpint = (int) second + tdep->size_long;
@@ -1238,7 +1225,6 @@ Do you want to stop the program?"),
       if (tmpulongest == 0 || tmpulongest == 2)
         {
           ULONGEST ptr, bytecount;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2, &ptr);
           regcache_raw_read_unsigned (regcache, tdep->arg3, &bytecount);
           if (record_arch_list_add_mem ((CORE_ADDR) ptr, (int) bytecount))
@@ -1337,7 +1323,6 @@ Do you want to stop the program?"),
     case gdb_sys_getdents:
       {
         ULONGEST count;
-
         regcache_raw_read_unsigned (regcache, tdep->arg2,
                                     &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg3, &count);
@@ -1469,7 +1454,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST nfds;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2, &nfds);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         tdep->size_pollfd * nfds))
@@ -1482,7 +1466,6 @@ Do you want to stop the program?"),
       if (tmpulongest == 7 || tmpulongest == 8)
         {
           int rsize;
-
           if (tmpulongest == 7)
             rsize = tdep->size_NFS_FHSIZE;
           else
@@ -1555,7 +1538,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST sigsetsize;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2,&sigsetsize);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         (int) sigsetsize))
@@ -1579,7 +1561,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST count;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3,&count);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) count))
             return -1;
@@ -1595,7 +1576,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST size;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2, &size);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) size))
             return -1;
@@ -1668,7 +1648,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST gidsetsize;
-
           regcache_raw_read_unsigned (regcache, tdep->arg1,
                                       &gidsetsize);
           tmpint = tdep->size_gid_t * (int) gidsetsize;
@@ -1730,7 +1709,6 @@ Do you want to stop the program?"),
     case gdb_sys_getdents64:
       {
         ULONGEST count;
-
         regcache_raw_read_unsigned (regcache, tdep->arg2,
                                     &tmpulongest);
         regcache_raw_read_unsigned (regcache, tdep->arg3, &count);
@@ -1773,7 +1751,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST size;
-
           regcache_raw_read_unsigned (regcache, tdep->arg4, &size);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) size))
             return -1;
@@ -1787,7 +1764,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST size;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &size);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) size))
             return -1;
@@ -1816,7 +1792,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST len;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2, &len);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) len))
             return -1;
@@ -1850,7 +1825,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST nr;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &nr);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         nr * tdep->size_io_event))
@@ -1905,7 +1879,6 @@ Do you want to stop the program?"),
     case gdb_sys_exit_group:
       {
         int q;
-
         target_terminal_ours ();
         q = yquery (_("The next instruction is syscall exit_group.  "
                       "It will make the program exit.  "
@@ -1921,7 +1894,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST len;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &len);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) len))
             return -1;
@@ -1937,7 +1909,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST maxevents;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &maxevents);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         maxevents * tdep->size_epoll_event))
@@ -2018,7 +1989,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST maxnode;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &maxnode);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         maxnode * tdep->size_long))
@@ -2037,7 +2007,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST msg_len;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &msg_len);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         (int) msg_len))
@@ -2086,7 +2055,6 @@ Do you want to stop the program?"),
           if (tmpulongest)
             {
               ULONGEST buflen;
-
               regcache_raw_read_unsigned (regcache, tdep->arg4, &buflen);
               if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                             (int) buflen))
@@ -2126,7 +2094,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST bufsiz;
-
           regcache_raw_read_unsigned (regcache, tdep->arg4, &bufsiz);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, (int) bufsiz))
             return -1;
@@ -2161,7 +2128,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST nfds;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2, &nfds);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         tdep->size_pollfd * nfds))
@@ -2207,7 +2173,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST nr_pages;
-
           regcache_raw_read_unsigned (regcache, tdep->arg2, &nr_pages);
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest,
                                         nr_pages * tdep->size_int))
@@ -2233,7 +2198,6 @@ Do you want to stop the program?"),
       if (tmpulongest)
         {
           ULONGEST maxevents;
-
           regcache_raw_read_unsigned (regcache, tdep->arg3, &maxevents);
           tmpint = (int) maxevents * tdep->size_epoll_event;
           if (record_arch_list_add_mem ((CORE_ADDR) tmpulongest, tmpint))
