@@ -1,3 +1,7 @@
+2010-03-16  Holger Hans Peter Freyther  <zecke@selfish.org>
+
+	* linux-record.c (record_linux_msghdr): Remove unintended semicolons.
+
 2010-03-15  Ralf Corsepius  <ralf.corsepius@rtems.org>  (tiny change)
 
 	* configure.ac: Exit if ${gdb_target_obs}" is not set.
